# jetbot-ros

./: .gitignore  README.MD
doc/: PiOLED.md  _Notes.md  camera.md  motors.md
doc/collision_avoidance/: collision_avoidance.md
jetbot/: CMakeLists.txt  package.xml  setup.cfg  setup.py
jetbot/jetbot/: data_collection.py  motors_node.py  motors_teleop.py  opencv_publisher.py  opencv_subscriber.py  test-cv2.py
jetbot/jetbot/collision_avoidance/: data_collection.py  live_demo_resnet18.py  train_model_resnet18.ipynb  train_model_resnet18.py
jetbot_motors/: package.xml  setup.cfg  setup.py
jetbot_motors/doc/: PiOLED.md
jetbot_motors/jetbot_motors/: Robot.py  RobotTest.py  _RobotTest.py  _i2c_test.py  _motors_Adafruit_MotorHAT_Obsolete.py  _servokittest.py  i2c_test.py  motors.py  motors_Adafruit_MotorHAT_Obsolete.py  motors_MotorKit.py  motors_hello.py  motors_node.py  pca9685_simpletest.py  pioled_hello.py  pioled_node.py  pioled_stats.py  test.py
ros2_numpy/: CMakeLists.txt  package.xml
